Systre 1.1.8:

2013-07-17: Incomplete coordination sequences are indicated by ellipses.
2013-07-16: Systre rejects nets with second-order collisions.
2013-05-22: RCSR archive is current as of today.
2013-05-15: Fixed default unit cell parameters for trigonal groups in :R setting
2013-05-15: Round off point coordinates in some net parser error messages
2013-04-27: Special warning when neither cell parameters nor edges are given
2013-04-24: Error messages from the parser now also appear in .cgd/.pgr output
2013-03-30: More graceful handling of errors during initialization
2013-03-30: Don't crash when $HOME/.systre directory is missing
2013-03-27: Added tool tips to all option dialog items
2013-03-27: Systre can read .cgd file entries of type TILING (i.e. face lists)
2013-03-26: Removed the zeolite archive; only the RCSR archive is built in now
2013-03-05: Archive files under ~/.systre are read at startup
2013-03-05: Systre can save its current configuration as a startup default
2013-03-05: TD10 value is rounded to the nearest integer.
2012-09-11: The Wells point symbols for vertices are displayed on request.
2012-09-06: Added some support for 1d structures.
2012-09-05: Warnings on unit cell parameters that don't fit the space group.
2012-09-03: Warnings for unknown keywords and missing space group information.
2012-08-31: Added option to embed based on vertex positions from input.
2012-08-20: The order of input vertices is now normally preserved.
2012-05-27: Reverted generated class files to version 49.0 (Java 1.5).

Systre 1.1.7:

2011-09-05: Fixed a bug in the embedder that made JVM 1.6 crash on OSX.

Systre 1.1.6:

  Bug fixes:
    - Archive output was empty with embedding disabled.

- Structure names for RCSR and the zeolite database are reported separately.
- The .tgs extension (from 2dtiler) is now supported for D-symbol files.
- RCSR archive is current as of 2009-10-21.

Systre 1.1.5:

  Bug fixes: